# libCRBM

./: CMakeLists.txt  LICENSE  README.md
.vimprj/: settings.vim
doc/: main.tex
src/crbm/: CMakeLists.txt  CRBM.cpp  CRBM.h  CRBMController.cpp  CRBMController.h  CRBMException.h  CRBMIO.cpp  CRBMIO.h  CRBMMatrix.cpp  CRBMMatrix.h  CRBMTrainer.cpp  CRBMTrainer.h  Discretiser.cpp  Discretiser.h  Matrix.cpp  Matrix.h  RBM.cpp  RBM.h  RBMException.h  Random.cpp  Random.h  main_run.cpp  main_train.cpp
tests/: CMakeLists.txt  crbm_test.cpp  crbm_test.h  crbm_trainer_test.cpp  crbm_trainer_test.h  crbmcontroller_test.cpp  crbmcontroller_test.h  crbmio_test.cpp  crbmio_test.h  discretiser_test.cpp  discretiser_test.h  rbm_test.cpp  rbm_test.h
